Fixed Bug #53958 (Closures can't 'use' shared variables by value and by reference)